dhall/tests/type-inference/failure/unit/RecursiveRecordTypeMergeLhsNotRecordType.txt
Type error: error: RecordTypeMergeRequiresRecordType
 --> <current file>:1:0
  |
1 | Bool ⩓ {}
  | ^^^^^^^^^ RecordTypeMergeRequiresRecordType
  |
